<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.thereaper.thaparexpress.menu.Details">

    <TextView
        android:id="@+id/roll"
        android:text="@string/roll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="120dp" />

    <TextView
        android:id="@+id/roll1"
        android:text="@string/roll2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/roll"
        android:layout_alignRight="@+id/Edit"
        android:layout_alignEnd="@+id/Edit" />

    <TextView
        android:id="@+id/Name"
        android:text="@string/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/roll"
        android:layout_alignStart="@+id/roll"
        android:layout_marginTop="130dp" />

    <TextView
        android:id="@+id/Name1"
        android:text="@string/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Name"
        android:layout_alignLeft="@+id/roll1"
        android:layout_alignStart="@+id/roll1" />

    <TextView
        android:id="@+id/Branch"
        android:text="@string/branch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Name"
        android:layout_alignLeft="@+id/Name"
        android:layout_alignStart="@+id/Name" />

    <TextView
        android:id="@+id/Branch1"
        android:text="@string/branch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Branch"
        android:layout_alignRight="@+id/roll1"
        android:layout_alignEnd="@+id/roll1" />

    <TextView
        android:id="@+id/Group"
        android:text="@string/group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/Branch"
        android:layout_alignStart="@+id/Branch"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/Group1"
        android:text="@string/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Group"
        android:layout_alignLeft="@+id/Branch1"
        android:layout_alignStart="@+id/Branch1" />

    <TextView
        android:id="@+id/Year"
        android:text="@string/year1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Group"
        android:layout_alignLeft="@+id/Group"
        android:layout_alignStart="@+id/Group"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/Year1"
        android:text="@string/year2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Year"
        android:layout_alignLeft="@+id/Group1"
        android:layout_alignStart="@+id/Group1" />

    <Button
        android:id="@+id/Edit"
        android:text="@string/editDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="83dp"
        android:layout_marginLeft="140dp"/>

</RelativeLayout>
