<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout_contribute"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame_contribute"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:id="@+id/textView"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="56dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginBottom="49dp"
            android:layout_gravity="center_horizontal|bottom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ghub_app1"
            android:id="@+id/textView4"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            />

        <TextView
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ghub_app"
            android:id="@+id/textView5"
            android:textSize="17sp"
            android:layout_marginTop="34dp"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginTop="150dp"
            android:id="@+id/relativeLayout"
            android:layout_gravity="center_horizontal|top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ghub_web1"
            android:id="@+id/textView2"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"/>

        <TextView
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ghub_web"
            android:id="@+id/textView3"
            android:textSize="17sp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            />
        </RelativeLayout>
    </FrameLayout>
    <ListView android:id="@+id/left_drawer_contribute"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>
